Header: Fix text-overflow in menu & add strong to user name

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -45,9 +45,6 @@
     .menuItem {
       display: block;
       padding: 4px 8px 4px 16px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
       color: #adbac7;
     }
 
